<resources>

    <string name="app_name">MultiActivityApp</string>
    <string name="full_name">Mark Evans</string>
    <string name="search_hint">Find a Recipe</string>
    <string name="btn_text1">Go Back</string>
    <string name="btn_text2">Search</string>
    <string name="btn_text3">Recipe Instructions</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Recipe It Up!</string>
    <string name="imagedes">Logo</string>

</resources>