<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="92dp"
	    android:text="@string/full_name"
	    android:textColor="@color/Green"
	    android:textSize="24dp" />

	<Button
	    android:id="@+id/button3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:background="@color/Green"
	    android:minHeight="38dip"
	    android:onClick="callThirdActivity"
	    android:padding="5dp"
	    android:text="@string/btn_text3"
	    android:textColor="@color/White" />
	
	<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/imagedes"
        android:src="@drawable/punchfork" />

	<Button
	    android:id="@+id/button1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:background="@color/Green"
	    android:minHeight="38dip"
	    android:onClick="callMainActivity"
	    android:padding="5dp"
	    android:text="@string/btn_text1"
	    android:textColor="@color/White" />
        
</RelativeLayout>
